@@ -4,24 +4,28 @@ import org.apache.lucene.analysis.TokenFilter;
 import org.apache.lucene.analysis.TokenStream;
 import org.apache.lucene.analysis.tokenattributes.CharTermAttribute;
 import org.apache.lucene.analysis.tokenattributes.KeywordAttribute;
+import org.elasticsearch.common.settings.Settings;
+import org.elasticsearch.env.Environment;
+import org.elasticsearch.index.IndexSettings;
 
 import java.io.IOException;
+import java.util.ArrayList;
+import java.util.Arrays;
 
 public class FarsiWordTokenizerFilter extends TokenFilter {
 
 	private final CharTermAttribute termAtt = addAttribute(CharTermAttribute.class);
 	private final KeywordAttribute keywordAttr = addAttribute(KeywordAttribute.class);
 
-	protected FarsiWordTokenizerFilter(TokenStream input) {
+	public FarsiWordTokenizerFilter(TokenStream input) {
 		super(input);
 	}
+
 
 	@Override
 	public boolean incrementToken() throws IOException {
 		if (input.incrementToken()) {
-			if (!keywordAttr.isKeyword()) {
-				termAtt.setEmpty().append(FarsiWordTokenizer.WordTokenize(termAtt.toString()).getFirst());
-			}
+			termAtt.setEmpty().append(FarsiWordTokenizer.WordTokenize(Arrays.toString(termAtt.buffer())).get(0));
 			return true;
 		} else {
 			return false;
